@@ -44,6 +44,7 @@ Version 1.3.11+svn:
      shouldn't be uploaded on the addon server (it's useful if you use a svn
      checkout for example)
    * fixed some more possible utf-8 related terminations	 
+   * fixed WML added anims being forgotten on save/load
 
 Version 1.3.11:
  * campaigns
